# gpg-bridge

./: .dockerignore  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.server  README.md  codecov.yml  sonar-project.properties
.github/: line-count-baseline-dart.json  line-count-baseline-rust.json
.github/scripts/: check-cargo-audit.py  check-dart-deps.py  check-line-counts.py  check-migrations.py
.github/skills/git-commit/: SKILL.md
.github/workflows/: ci.yml  cla.yml
daemon/: Cargo.toml  README.md
daemon/src/: config.rs  config_tests.rs  e2e_crypto.rs  gpg.rs  gpg_key_cache.rs  http.rs  http_tests.rs  ipc.rs  main.rs  pairing.rs  pairing_tests.rs  sexp.rs  sign_event_sse.rs  sign_event_sse_tests.rs  sign_flow.rs  sign_flow_tests.rs  sse.rs  sse_tests.rs  test_http_server.rs  token_refresh.rs  token_refresh_tests.rs  token_store.rs
daemon/src/assuan/: command.rs  command_tests.rs  error_code.rs  handler.rs  handler_tests.rs  mod.rs  response.rs  session.rs  session_tests.rs  sign_handler.rs
daemon/src/ipc/: mod.rs  unix.rs  windows.rs
docs/spec/: mobile-screen-design.md  mobile-screen-flow.md  openapi.yaml  requirements.md
mobile/: README.md  build.yaml  flutter_native_splash.yaml  pubspec.yaml
mobile/ios/Runner/: Info.plist  (+1 more)
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: android_keystore_service_test.dart  api_exception_test.dart  auth_interceptor_test.dart  crypto_utils_test.dart  debug_log_interceptor_test.dart  device_api_service_test.dart  device_assertion_jwt_service_test.dart  device_jwt_checker_test.dart  device_jwt_refresh_interceptor_test.dart  device_registration_service_test.dart  error_interceptor_test.dart  fcm_message_handler_test.dart  fcm_token_service_test.dart  gpg_armor_test.dart  gpg_jwk_converter_test.dart  gpg_key_api_service_test.dart  gpg_key_import_page_test.dart  gpg_key_material_test.dart  gpg_key_parser_test.dart  gpg_keygrip_test.dart  gpg_packet_test.dart  gpg_signing_service_test.dart  http_client_provider_test.dart  ios_secure_enclave_service_test.dart  jwe_service_test.dart  key_management_service_test.dart  key_tab_async_state_test.dart  keys_page_test.dart  keystore_platform_service_test.dart  pairing_api_service_test.dart  pairing_page_test.dart  pairing_service_test.dart  pairing_state_test.dart  pairing_types_test.dart  public_key_api_service_test.dart  qr_scan_page_test.dart  register_page_test.dart  secure_storage_service_test.dart  server_url_interceptor_test.dart  server_url_service_test.dart  (+9 more)
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
server/: .env.example  Cargo.toml  README.md
server/migrations/: 202602230001_create_clients.sql  202602230001_create_sign_requests.sql  202602230002_create_pairings.sql  202602230003_create_client_pairings.sql  202602230004_create_requests.sql  202602230005_create_jtis.sql  202602230006_create_signing_keys.sql  202602230007_create_audit_log.sql
server/src/: config.rs  error.rs  http.rs  lib.rs  main.rs  observability.rs  repository.rs  test_support.rs
server/src/config/: lookup.rs  mod.rs  tests.rs  validation.rs
server/src/http/: accept.rs  accept_tests.rs  fcm.rs  middleware.rs  mod.rs  mod_tests.rs
server/src/http/auth/: client_jwt.rs  client_jwt_tests.rs  daemon_auth.rs  daemon_auth_tests.rs  device_assertion.rs  device_assertion_tests.rs  error.rs  mod.rs  sign_jwt.rs  sign_jwt_tests.rs  test_support.rs
server/src/http/device/: delete.rs  mod.rs  refresh.rs  register.rs  tests.rs  update.rs  validation.rs
server/src/http/device/gpg_key/: add.rs  delete.rs  list.rs  mod.rs
server/src/http/device/public_key/: add.rs  delete.rs  list.rs  mod.rs
server/src/http/device/tests/: gpg_key.rs  mod.rs  public_key.rs  register.rs  register_mutations.rs
server/src/http/fcm/: client.rs  client_tests.rs  helpers.rs  integration_tests.rs  mod.rs  oauth2.rs  oauth2_tests.rs  test_helpers.rs
server/src/http/pairing/: delete_by_daemon.rs  delete_by_phone.rs  gpg_keys.rs  helpers.rs  mod.rs  notifier.rs  pair.rs  refresh.rs  session.rs  session_stream.rs  tests.rs  token.rs
server/src/http/pairing/tests/: coverage.rs  crud.rs  gpg_keys.rs  helpers_unit.rs  mod.rs  pair_errors.rs  refresh_token_errors.rs  sse.rs
server/src/http/rate_limit/: config.rs  headers.rs  ip_extractor.rs  middleware.rs  mod.rs  sliding_window.rs  sliding_window_tests.rs  sse_request.rs  sse_tracker.rs  tier.rs
server/src/http/signing/: delete_request.rs  get_request.rs  handler.rs  helpers.rs  mod.rs  notifier.rs  phase2.rs  sign_events.rs  sign_result.rs  tests.rs  types.rs  validation.rs
server/src/http/signing/tests/: delete_request.rs  get_and_result.rs  mod.rs  patch_request.rs  post_request.rs  sign_events.rs  unit_tests.rs
server/src/jobs/: mod.rs  tests.rs
server/src/jwt/: claims.rs  encryption.rs  key_management.rs  mod.rs  signing.rs  signing_tests.rs
server/src/repository/: audit_log.rs  cleanup.rs  client.rs  client_pairing.rs  impl_repo.rs  jti.rs  mod.rs  pairing.rs  postgres.rs  request.rs  signing_key.rs  sql.rs  sqlite.rs  sqlite_tests.rs
server/src/repository/postgres/: audit_log.rs  cleanup.rs  client.rs  client_pairing.rs  infrastructure.rs  jti.rs  mod.rs  pairing.rs  request.rs  signing_key.rs
server/src/repository/sql/: audit_log.rs  cleanup.rs  client.rs  client_pairing.rs  infrastructure.rs  jti.rs  mod.rs  pairing.rs  signing_key.rs
server/src/repository/sql/client/: lifecycle.rs  lookup.rs  update.rs
server/src/repository/sql/client_pairing/: cleanup.rs  mutation.rs  query.rs
server/src/repository/sqlite/: audit_log.rs  cleanup.rs  client.rs  client_pairing.rs  infrastructure.rs  jti.rs  mod.rs  pairing.rs  request.rs  signing_key.rs
server/src/repository/tests/: audit_log_tests.rs  cleanup_tests.rs  client_pairing_tests.rs  client_tests.rs  fixture.rs  helpers.rs  infrastructure_tests.rs  jti_tests.rs  mod.rs  pairing_tests.rs  request_tests.rs  signing_key_tests.rs
server/test_fixtures/: fake_rsa_key.pem
signatures/version1/: cla.json
tmp/: .kan17-pr-marker
(+111 files in other folders)
