[workspace]
resolver = "3"
members = ["server", "daemon"]

[workspace.package]
authors = ["chalharu"]
repository = "https://github.com/chalharu/gpg-bridge.git"
license = "AGPL-3.0"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15.7"
eventsource-stream = "0.2.3"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream"] }
postgresql_embedded = "0.20.2"
thiserror = "2.0.18"
serde_yml = "0.0.12"
tempfile = "3.25.0"
toml = "1.0.3"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "util", "cors"] }
josekit = "0.10"
base64 = "0.22"
qrcode = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"
zeroize = "1"
